[tool.poetry]
name = "chroma-web"
version = "0.1.0"
description = ""
authors = ["Purushothaman06 <purushothamanramesh3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
chromadb = "^0.5.0"
mesop = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
